# welcomer-bot

./: Dockerfile  go.mod  go.sum  main.go  main.py  pyproject.toml
.github/workflows/: build-and-push.yml
